cwf/gateway/docker/BUILD.bazel# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")


# container_image(
#     name = "cwf_sessiond_builder",
#     base = "@ubuntu_bionic//image",
#     cmd = [
#         "cp ",
#     ],
#     files = [
#         "//lte/gateway/c/session_manager:sessiond",
#         "//lte/gateway/configs:configs",
#         "//orc8r/gateway/configs:templates",
#     ],
# )

cc_image(
    name = "session_image",
    base = "@ubuntu_bionic//image",
    binary = "//lte/gateway/c/session_manager:sessiond",
)
