# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "registry",
    srcs = [
        "cloud_registry.go",
        "local_registry.go",
    ],
    importpath = "magma/feg/gateway/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//orc8r/gateway/go/service_registry",
        "//orc8r/lib/go/protos:common_go_proto",
        "//orc8r/lib/go/registry",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "registry_test",
    srcs = ["registry_test.go"],
    deps = [
        "//feg/cloud/go/protos:hello_go_proto",
        "//feg/gateway/registry",
        "//orc8r/gateway/go/service_registry",
        "//orc8r/lib/go/registry",
        "//orc8r/lib/go/service/config",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)
