# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "pkg_mklink")

pkg_filegroup(
    name = "magma_config_files",
    srcs = [
        ":lte_configs",
        ":pipelined_symlink",
        ":sessiond_symlink",
    ],
    visibility = ["//lte/gateway/release:__pkg__"],
)

pkg_mklink(
    name = "pipelined_symlink",
    link_name = "/etc/magma/pipelined.yml",
    target = "/etc/magma/pipelined.yml_prod",
)

pkg_mklink(
    name = "sessiond_symlink",
    link_name = "/etc/magma/sessiond.yml",
    target = "/etc/magma/sessiond.yml_prod",
)

# The files pipelined.yml and sessiond.yml are not packaged for a production .deb.
# Symbolic links are created to pipelined.yml_prod and sessiond.yml_prod.
# TODO control_proxy.yml is packaged as default - but is a possible parameter.
pkg_files(
    name = "lte_configs",
    srcs = [
        ":control_proxy.yml",
        ":ctraced.yml",
        ":directoryd.yml",
        ":dnsd.yml",
        ":dnsmasq.conf",
        ":enodebd.yml",
        ":eventd.yml",
        ":gateway.mconfig",
        ":health.yml",
        ":kernsnoopd.yml",
        ":liagentd.yml",
        ":lighttpd.yml",
        ":logfiles.txt",
        ":magmad.yml",
        ":mme.yml",
        ":mobilityd.yml",
        ":monitord.yml",
        ":pipelined.yml_prod",
        ":policydb.yml",
        ":redirectd.yml",
        ":redis.yml",
        ":sctpd.yml",
        ":service_registry.yml",
        ":sessiond.yml_prod",
        ":smsd.yml",
        ":spgw.yml",
        ":state.yml",
        ":streamer.yml",
        ":subscriberdb.yml",
    ],
)
