# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer", "container_push")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")


download_pkgs(
    name = "python_interpreters_packages_amd64",
    packages = [
        "python",  # Python 2 seems to be required during the build
        "python3",
        "python3-distutils",  # make strtobool from deprecated distutils work
        ],
    image_tar = "@ubuntu_focal_amd64//image",
)

install_pkgs(
    name = "python_interpreters_layer_amd64",
    image_tar = "@ubuntu_focal_amd64//image",
    installables_tar = ":python_interpreters_packages_amd64.tar",
    output_image_name = "python_interpreters_layer_amd64",
)

container_image(
    name = "python_base_image_amd64",
    base = ":python_interpreters_layer_amd64.tar",
    visibility = ["//visibility:public"],
)

download_pkgs(
    name = "python_interpreters_packages_aarch64",
    packages = [
        "python",  # Python 2 seems to be required during the build
        "python3",
        "python3-distutils",  # make strtobool from deprecated distutils work
        ],
    image_tar = "@ubuntu_focal_aarch64//image",
)

install_pkgs(
    name = "python_interpreters_layer_aarch64",
    image_tar = "@ubuntu_focal_aarch64//image",
    installables_tar = ":python_interpreters_packages_aarch64.tar",
    output_image_name = "python_interpreters_layer_aarch64",
)

container_image(
    name = "python_base_image_aarch64",
    base = ":python_interpreters_layer_aarch64.tar",
    visibility = ["//visibility:public"],
)