# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer", "container_push")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")
load(
    "@io_bazel_rules_docker//docker/util:run.bzl",
    "container_run_and_commit",
)

config_setting(
    name = "amd64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "aarch64",
    constraint_values = ["@platforms//cpu:arm64"],
)

download_pkgs(
    name = "python_interpreters_packages",
    packages = [
        "python",  # Python 2 seems to be required during the build
        "python3",
        "python3-distutils",  # make strtobool from deprecated distutils work
        ],
    image_tar = select({
        "amd64": "@ubuntu_focal_amd64//image",
        "aarch64": "@ubuntu_focal_aarch64//image",
    }),
)

install_pkgs(
    name = "python_interpreters_layer",
    image_tar = select({
        "amd64": "@ubuntu_focal_amd64//image",
        "aarch64": "@ubuntu_focal_aarch64//image",
    }),
    installables_tar = ":python_interpreters_packages.tar",
    output_image_name = "python_interpreters_layer",
)

container_image(
    name = "python_base_image",
    base = ":python_interpreters_layer.tar",
    visibility = ["//visibility:public"],
)

container_run_and_commit(
    name = "rhel_python_image",
    commands = [
        "yum install -y python38",
        "ln -s python3 /usr/bin/python",
    ],
    image = "@rhel8_ubi//image",
    visibility = ["//visibility:public"],
)
